methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime31.FlowerCase'
override def run() {growFlowers()
             ^